Revert "Lilac: Fix lint raised by Google error-prone and Intellij inspections."
This reverts commit c8202b0d9c58a1f99e0e209d85e6dee4e7993243.