@@ -5,10 +5,8 @@ import static java.lang.Math.min;
 import static com.hartwig.hmftools.lilac.LilacConfig.LL_LOGGER;
 
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -21,41 +19,41 @@ import com.hartwig.hmftools.lilac.seq.HlaSequenceLoci;
 public final class PhasedEvidence implements Comparable<PhasedEvidence>
 {
     private final List<Integer> mAminoAcidLoci;
-    private final Map<String, Integer> mEvidenceMap;
+    private final Map<String,Integer> mEvidenceMap;
     private final int mHashCode;
 
-    public PhasedEvidence(final int[] aminoAcidIndices, final Map<String, Integer> evidence)
+    public PhasedEvidence(final int[] aminoAcidIndices, final Map<String,Integer> evidence)
     {
         mAminoAcidLoci = Lists.newArrayList();
-        Arrays.stream(aminoAcidIndices).forEach(mAminoAcidLoci::add);
+        Arrays.stream(aminoAcidIndices).forEach(x -> mAminoAcidLoci.add(x));
         mEvidenceMap = evidence;
         mHashCode = mAminoAcidLoci.hashCode();
     }
 
-    public PhasedEvidence(final List<Integer> aminoAcidLoci, final Map<String, Integer> evidence)
+    public PhasedEvidence(final List<Integer> aminoAcidLoci, final Map<String,Integer> evidence)
     {
         mAminoAcidLoci = aminoAcidLoci;
         mEvidenceMap = evidence;
         mHashCode = mAminoAcidLoci.hashCode();
     }
 
-    public List<Integer> getAminoAcidLoci() { return mAminoAcidLoci; }
+    public final List<Integer> getAminoAcidLoci() { return mAminoAcidLoci; }
 
-    public Map<String, Integer> getEvidence()
+    public final Map<String,Integer> getEvidence()
     {
         return mEvidenceMap;
     }
 
-    private boolean consistentWithAny(final Collection<HlaSequenceLoci> candidates, final String sequence)
+    private boolean consistentWithAny(final List<HlaSequenceLoci> candidates, final String sequence)
     {
         return candidates.stream().anyMatch(x -> x.consistentWith(sequence, mAminoAcidLoci));
     }
 
-    public PhasedEvidence inconsistentEvidence(final Collection<HlaSequenceLoci> candidates)
+    public PhasedEvidence inconsistentEvidence(final List<HlaSequenceLoci> candidates)
     {
-        Map<String, Integer> filteredEvidence = mEvidenceMap.entrySet().stream()
+        Map<String,Integer> filteredEvidence = mEvidenceMap.entrySet().stream()
                 .filter(x -> !consistentWithAny(candidates, x.getKey()))
-                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+                .collect(Collectors.toMap(entry -> entry.getKey(), entry -> entry.getValue()));
 
         return new PhasedEvidence(mAminoAcidLoci, filteredEvidence);
     }
@@ -88,7 +86,7 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return indices;
     }
 
-    private int unambiguousTailLength()
+    private final int unambiguousTailLength()
     {
         int endIndex = mAminoAcidLoci.size();
 
@@ -96,9 +94,7 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         {
             int startIndex = endIndex - i - 1;
 
-            Set<String> evidenceTails = mEvidenceMap.keySet().stream()
-		    .map(x -> x.substring(startIndex, endIndex))
-		    .collect(Collectors.toSet());
+            Set<String> evidenceTails = mEvidenceMap.keySet().stream().map(x -> x.substring(startIndex, endIndex)).collect(Collectors.toSet());
 
             if(evidenceTails.size() == mEvidenceMap.size())
                 return i + 1;
@@ -107,7 +103,7 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return mAminoAcidLoci.size();
     }
 
-    private int unambiguousHeadLength()
+    private final int unambiguousHeadLength()
     {
         for(int i = 0; i < mAminoAcidLoci.size(); ++i)
         {
@@ -121,31 +117,32 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return mAminoAcidLoci.size();
     }
 
-    public boolean contains(final PhasedEvidence other)
+    public final boolean contains(final PhasedEvidence other)
     {
-        Set<Integer> overlapIndices = Sets.newHashSet(mAminoAcidLoci);
-        overlapIndices.addAll(other.mAminoAcidLoci);
+        Set<Integer> overlapIndices = Sets.newHashSet();
+        mAminoAcidLoci.forEach(x -> overlapIndices.add(x));
+        other.getAminoAcidLoci().forEach(x -> overlapIndices.add(x));
 
         int overlapCount = overlapIndices.size();
-        return overlapCount == other.mAminoAcidLoci.size();
+        return overlapCount == other.getAminoAcidLoci().size();
     }
 
-    private int minEvidence()
+    public final int minEvidence()
     {
         return mEvidenceMap.values().stream().mapToInt(x -> x).min().orElse(0);
     }
 
-    public int totalEvidence()
+    public final int totalEvidence()
     {
         return mEvidenceMap.values().stream().mapToInt(x -> x).sum();
     }
 
-    public PhasedEvidence removeSingles(int minTotalEvidence)
+    public final PhasedEvidence removeSingles(int minTotalEvidence)
     {
         if(totalEvidence() >= minTotalEvidence)
         {
             Map<String, Integer> newEvidence = mEvidenceMap.entrySet().stream()
-                    .filter(x -> x.getValue() > 1).collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+                    .filter(x -> x.getValue() > 1).collect(Collectors.toMap(entry -> entry.getKey(), entry -> entry.getValue()));
 
             return new PhasedEvidence(mAminoAcidLoci, newEvidence);
         }
@@ -153,7 +150,6 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return this;
     }
 
-    @Override
     public String toString()
     {
         int uniqueTail = unambiguousTailLength();
@@ -193,7 +189,6 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return 0;
     }
 
-    @Override
     public boolean equals(final Object other)
     {
         if(this == other)
@@ -202,20 +197,29 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         if(!(other instanceof PhasedEvidence))
             return false;
 
-        final List<Integer> otherIndices = ((PhasedEvidence) other).mAminoAcidLoci;
-        return Objects.equals(mAminoAcidLoci, otherIndices);
+        final List<Integer> otherIndices = ((PhasedEvidence)other).getAminoAcidLoci();
+
+        if(mAminoAcidLoci.size() != otherIndices.size())
+            return false;
+
+        for(int i = 0; i < mAminoAcidLoci.size(); ++i)
+        {
+            if(mAminoAcidLoci.get(i) != otherIndices.get(i))
+                return false;
+        }
+
+        return true;
     }
 
-    @Override
     public int hashCode()
     {
         return mHashCode;
     }
 
-    public static PhasedEvidence evidence(final Collection<Fragment> fragments, final List<Integer> indices)
+    public static PhasedEvidence evidence(final List<Fragment> fragments, final List<Integer> indices)
     {
-        List<Fragment> filteredFragments = fragments.stream().filter(x -> x.containsAminoAcidLoci(indices)).toList();
-        final Map<String, Integer> evidence = Maps.newHashMap();
+        List<Fragment> filteredFragments = fragments.stream().filter(x -> x.containsAminoAcidLoci(indices)).collect(Collectors.toList());
+        final Map<String,Integer> evidence = Maps.newHashMap();
 
         for(Fragment fragment : filteredFragments)
         {
@@ -227,16 +231,15 @@ public final class PhasedEvidence implements Comparable<PhasedEvidence>
         return new PhasedEvidence(indices, evidence);
     }
 
-    public static void logInconsistentEvidence(final String gene, final Iterable<PhasedEvidence> evidence,
-            final Collection<HlaSequenceLoci> candidates)
+    public static void logInconsistentEvidence(final String gene, final List<PhasedEvidence> evidence, final List<HlaSequenceLoci> candidates)
     {
-        List<HlaSequenceLoci> expectedSequences = candidates.stream().filter(x -> x.Allele.Gene.equals(gene)).toList();
+        List<HlaSequenceLoci> expectedSequences = candidates.stream().filter(x -> x.Allele.Gene.equals(gene)).collect(Collectors.toList());
 
-        for(HlaSequenceLoci sequence : expectedSequences)
+        for (HlaSequenceLoci sequence : expectedSequences)
         {
-            for(PhasedEvidence phasedEvidence : evidence)
+            for (PhasedEvidence phasedEvidence : evidence)
             {
-                if(!sequence.consistentWith(phasedEvidence))
+                if (!sequence.consistentWith(phasedEvidence))
                 {
                     LL_LOGGER.debug("actual allele {} filtered by {}", sequence.Allele, phasedEvidence);
                 }
